feat: adicionado busca de usuário por id

--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,7 @@
       <h2 class="title">Selects:</h2>
       <div class="buttons">
         <a href="/usuarios">Usuarios</a>
+        <a href="/usuarios/1">Usuario de ID 1</a>
       </div>
     </div>
   </body>
