--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,10 @@
         color: rgb(0, 0, 0);
         border-radius: 15px;
         border: 1px solid rgb(0, 0, 0);
+        cursor: pointer;
+      }
+      a:hover {
+        background-color: #f0f0f0;
       }
       .header {
         display: flex;
@@ -34,7 +38,8 @@
         padding-bottom: 1rem;
       }
       .box {
-        margin-bottom: 5rem;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
       }
       .buttons {
         display: flex;
@@ -42,7 +47,7 @@
         justify-content: center;
         align-items: center;
         margin: auto;
-        margin-top: 2rem;
+        margin-top: 1rem;
         flex-wrap: wrap;
         row-gap: 1rem;
         column-gap: 1rem;
@@ -50,12 +55,27 @@
       .title {
         text-align: center;
         margin: auto;
-        margin-top: 2rem;
+        margin-bottom: 1rem;
       }
       .message {
         text-align: center;
         margin-top: 1rem;
         margin-bottom: 1rem;
+      }
+      input[type='text'] {
+        display: block;
+        margin: auto;
+        padding: 0.5rem;
+        border-radius: 10px;
+        border: 1px solid rgb(0, 0, 0);
+        width: 200px;
+        text-align: center;
+      }
+      .subbox {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+        align-items: center;
       }
     </style>
   </head>
@@ -71,8 +91,39 @@
       <h2 class="title">Selects:</h2>
       <div class="buttons">
         <a href="/usuarios">Usuarios</a>
-        <a href="/usuarios/1">Usuario de ID 1</a>
+        <a href="/obras">Obras</a>
       </div>
     </div>
+    <div class="box">
+      <h2 class="title">Selects por id:</h2>
+      <div class="buttons">
+        <div class="subbox">
+          <input type="text" data-input="usuario" placeholder="Digite o ID do usuário" />
+          <a href="#" data-route="/usuarios" data-input="usuario">UsuarioId</a>
+        </div>
+      </div>
+    </div>
+
+    <script>
+      document.addEventListener('click', (e) => {
+        const button = e.target;
+
+        // Verifica se o elemento clicado tem data-route
+        if (button.hasAttribute('data-route') && button.hasAttribute('data-input')) {
+          e.preventDefault();
+
+          const route = button.getAttribute('data-route');
+          const inputName = button.getAttribute('data-input');
+          const input = document.querySelector(`input[data-input="${inputName}"]`);
+
+          if (input) {
+            const value = input.value.trim();
+            if (value) {
+              window.location.href = route + '/' + value;
+            }
+          }
+        }
+      });
+    </script>
   </body>
 </html>
