--- a/public/index.html
+++ b/public/index.html
@@ -26,14 +26,17 @@
         <a href="/categorias">Categorias</a>
         <a href="/tipoobras">Tipo de Obras</a>
         <a href="/paises">Paises</a>
+        <a href="/funcoes">Funções</a>
       </div>
     </div>
+    <hr />
     <div class="box">
       <h2 class="title">Selects com join:</h2>
       <div class="buttons">
         <a href="/avaliacoes/avaliacoesobras">Avaliações de obras</a>
       </div>
     </div>
+    <hr />
     <div class="box">
       <h2 class="title">Selects por id:</h2>
       <div class="buttons">
@@ -59,6 +62,7 @@
         </div>
       </div>
     </div>
+    <hr />
     <div class="box">
       <h2 class="title">Inserir:</h2>
       <div class="boxarea">
@@ -73,6 +77,7 @@
             <div class="responseArea"></div>
           </div>
         </div>
+
         <div class="buttons">
           <div class="subbox">
             <h3>Obra</h3>
@@ -84,6 +89,7 @@
             <div class="responseArea"></div>
           </div>
         </div>
+
         <div class="buttons">
           <div class="subbox">
             <h3>Temporada</h3>
@@ -98,6 +104,7 @@
             <div class="responseArea"></div>
           </div>
         </div>
+
         <div class="buttons">
           <div class="subbox">
             <h3>Episódio</h3>
@@ -125,8 +132,19 @@
             <div class="responseArea"></div>
           </div>
         </div>
+
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Função</h3>
+            <input type="text" data-field="tipo" placeholder="Digite o tipo" />
+            <button data-route="/funcoes" data-method="post" data-fields="tipo">Criar Função</button>
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
       </div>
     </div>
+    <hr />
     <div class="box">
       <h2 class="title">Alterar:</h2>
       <div class="boxarea">
@@ -141,6 +159,7 @@
             <div class="responseArea"></div>
           </div>
         </div>
+
         <div class="buttons">
           <div class="subbox">
             <h3>Obras</h3>
@@ -153,6 +172,7 @@
             <div class="responseArea"></div>
           </div>
         </div>
+
         <div class="buttons">
           <div class="subbox">
             <h3>Temporada</h3>
@@ -168,6 +188,7 @@
             <div class="responseArea"></div>
           </div>
         </div>
+
         <div class="buttons">
           <div class="subbox">
             <h3>Avaliação</h3>
@@ -184,6 +205,7 @@
         </div>
       </div>
     </div>
+    <hr />
     <div class="box">
       <h2 class="title">Excluir:</h2>
       <div class="boxarea">
@@ -196,6 +218,7 @@
             <div class="responseArea"></div>
           </div>
         </div>
+
         <div class="buttons">
           <div class="subbox">
             <h3>Obra</h3>
@@ -205,6 +228,7 @@
             <div class="responseArea"></div>
           </div>
         </div>
+
         <div class="buttons">
           <div class="subbox">
             <h3>Temporada</h3>
@@ -214,6 +238,7 @@
             <div class="responseArea"></div>
           </div>
         </div>
+
         <div class="buttons">
           <div class="subbox">
             <h3>Episódio</h3>
@@ -223,6 +248,7 @@
             <div class="responseArea"></div>
           </div>
         </div>
+
         <div class="buttons">
           <div class="subbox">
             <h3>Avaliação</h3>
