--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,8 @@
             <input type="email" data-field="email" placeholder="Digite o email" />
             <input type="password" data-field="senha" placeholder="Digite a senha" />
             <button data-route="/usuarios" data-method="post" data-fields="apelido,email,senha">Criar Usuário</button>
+          </div>
+          <div class="subbox">
             <p>Resposta:</p>
             <div class="responseArea"></div>
           </div>
@@ -85,6 +87,20 @@
             <input type="text" data-field="descricao" placeholder="Digite a descrição" />
             <input type="text" data-field="tipoObraNome" placeholder="Digite o tipo da obra" />
             <button data-route="/obras" data-method="post" data-fields="titulo,descricao,tipoObraNome">Criar Obra</button>
+          </div>
+          <div class="subbox">
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
+
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Função</h3>
+            <input type="text" data-field="tipo" placeholder="Digite o tipo" />
+            <button data-route="/funcoes" data-method="post" data-fields="tipo">Criar Função</button>
+          </div>
+          <div class="subbox">
             <p>Resposta:</p>
             <div class="responseArea"></div>
           </div>
@@ -100,6 +116,8 @@
             <input type="text" data-field="descricao" placeholder="Descrição (opcional)" />
             <input type="text" data-field="obraId" placeholder="ID da Obra" />
             <button data-route="/temporadas" data-method="post" data-fields="numero,titulo,dataInicio,dataFim,descricao,obraId">Criar Temporada</button>
+          </div>
+          <div class="subbox">
             <p>Resposta:</p>
             <div class="responseArea"></div>
           </div>
@@ -114,6 +132,8 @@
             <input type="text" data-field="descricao" placeholder="Descrição" />
             <input type="text" data-field="temporadaId" placeholder="ID da Temporada" />
             <button data-route="/episodios" data-method="post" data-fields="numero,dataLancamento,titulo,descricao,temporadaId">Criar Episódio</button>
+          </div>
+          <div class="subbox">
             <p>Resposta:</p>
             <div class="responseArea"></div>
           </div>
@@ -128,16 +148,8 @@
             <input type="number" data-field="nota" placeholder="Nota (0+)" />
             <input type="text" data-field="comentario" placeholder="Comentário (opcional)" />
             <button data-route="/avaliacoes" data-method="post" data-fields="usuarioId,obraId,episodioId,nota,comentario">Criar Avaliação</button>
-            <p>Resposta:</p>
-            <div class="responseArea"></div>
           </div>
-        </div>
-
-        <div class="buttons">
           <div class="subbox">
-            <h3>Função</h3>
-            <input type="text" data-field="tipo" placeholder="Digite o tipo" />
-            <button data-route="/funcoes" data-method="post" data-fields="tipo">Criar Função</button>
             <p>Resposta:</p>
             <div class="responseArea"></div>
           </div>
@@ -155,6 +167,8 @@
             <input type="text" data-field="apelido" placeholder="Digite o apelido" />
             <input type="email" data-field="email" placeholder="Digite o email" />
             <button data-route="/usuarios" data-method="put" data-fields="apelido,email">Alterar Usuário</button>
+          </div>
+          <div class="subbox">
             <p>Resposta:</p>
             <div class="responseArea"></div>
           </div>
@@ -168,6 +182,8 @@
             <input type="text" data-field="descricao" placeholder="Digite a descrição" />
             <input type="text" data-field="tipoObraNome" placeholder="Digite o tipo da obra" />
             <button data-route="/obras" data-method="put" data-fields="titulo,descricao,tipoObraNome">Alterar Obra</button>
+          </div>
+          <div class="subbox">
             <p>Resposta:</p>
             <div class="responseArea"></div>
           </div>
@@ -184,6 +200,8 @@
             <input type="text" data-field="descricao" placeholder="Descrição" />
             <input type="text" data-field="obraId" placeholder="ID da Obra" />
             <button data-route="/temporadas" data-method="put" data-fields="numero,titulo,dataInicio,dataFim,descricao,obraId">Alterar Temporada</button>
+          </div>
+          <div class="subbox">
             <p>Resposta:</p>
             <div class="responseArea"></div>
           </div>
@@ -199,6 +217,8 @@
             <input type="number" data-field="nota" placeholder="Nota" />
             <input type="text" data-field="comentario" placeholder="Comentário" />
             <button data-route="/avaliacoes" data-method="put" data-fields="usuarioId,obraId,episodioId,nota,comentario">Alterar Avaliação</button>
+          </div>
+          <div class="subbox">
             <p>Resposta:</p>
             <div class="responseArea"></div>
           </div>
@@ -214,6 +234,8 @@
             <h3>Usuário</h3>
             <input type="text" data-field="id" placeholder="Digite o id" />
             <button data-route="/usuarios" data-method="delete" data-fields="id">Excluir Usuário</button>
+          </div>
+          <div class="subbox">
             <p>Resposta:</p>
             <div class="responseArea"></div>
           </div>
@@ -224,6 +246,8 @@
             <h3>Obra</h3>
             <input type="text" data-field="id" placeholder="Digite o id da obra" />
             <button data-route="/obras" data-method="delete">Excluir Obra</button>
+          </div>
+          <div class="subbox">
             <p>Resposta:</p>
             <div class="responseArea"></div>
           </div>
@@ -234,6 +258,8 @@
             <h3>Temporada</h3>
             <input type="text" data-field="id" placeholder="ID da Temporada" />
             <button data-route="/temporadas" data-method="delete">Excluir Temporada</button>
+          </div>
+          <div class="subbox">
             <p>Resposta:</p>
             <div class="responseArea"></div>
           </div>
@@ -244,6 +270,8 @@
             <h3>Episódio</h3>
             <input type="text" data-field="id" placeholder="ID do Episódio" />
             <button data-route="/episodios" data-method="delete">Excluir Episódio</button>
+          </div>
+          <div class="subbox">
             <p>Resposta:</p>
             <div class="responseArea"></div>
           </div>
@@ -254,6 +282,8 @@
             <h3>Avaliação</h3>
             <input type="text" data-field="id" placeholder="ID da Avaliação" />
             <button data-route="/avaliacoes" data-method="delete">Excluir Avaliação</button>
+          </div>
+          <div class="subbox">
             <p>Resposta:</p>
             <div class="responseArea"></div>
           </div>
