Fix responseArea e crud basico generalizado

--- a/public/index.html
+++ b/public/index.html
@@ -154,6 +154,18 @@
             <div class="responseArea"></div>
           </div>
         </div>
+
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Categoria</h3>
+            <input type="text" data-field="cateNome" placeholder="Nome da Categoria" />
+            <button data-route="/categorias" data-method="post" data-fields="cateNome">Criar Categoria</button>
+          </div>
+          <div class="subbox">
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
       </div>
     </div>
     <hr />
