fix updatedAt e factory

--- a/public/index.html
+++ b/public/index.html
@@ -158,8 +158,8 @@
         <div class="buttons">
           <div class="subbox">
             <h3>Categoria</h3>
-            <input type="text" data-field="cateNome" placeholder="Nome da Categoria" />
-            <button data-route="/categorias" data-method="post" data-fields="cateNome">Criar Categoria</button>
+            <input type="text" data-field="nome" placeholder="Nome da Categoria" />
+            <button data-route="/categorias" data-method="post" data-fields="nome">Criar Categoria</button>
           </div>
           <div class="subbox">
             <p>Resposta:</p>
