Adicionando rotas de todas tabelas principais

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,12 @@
         <a href="/tipoobras">Tipo de Obras</a>
         <a href="/paises">Paises</a>
         <a href="/funcoes">Funções</a>
+        <a href="/profissionais">Profissionais</a>
+        <a href="/criticos">Críticos</a>
+        <a href="/moderadores">Moderadores</a>
+        <a href="/participacoes">Participações</a>
+        <a href="/organizacoes">Organizações</a>
+        <a href="/listasusuario">Lista de Usuários</a>
       </div>
     </div>
     <hr />
@@ -294,6 +300,30 @@
             <h3>Avaliação</h3>
             <input type="text" data-field="id" placeholder="ID da Avaliação" />
             <button data-route="/avaliacoes" data-method="delete">Excluir Avaliação</button>
+          </div>
+          <div class="subbox">
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
+
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Função</h3>
+            <input type="text" data-field="id" placeholder="ID da Função" />
+            <button data-route="/funcoes" data-method="delete">Excluir Função</button>
+          </div>
+          <div class="subbox">
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
+
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Profissional</h3>
+            <input type="text" data-field="id" placeholder="ID do Profissional" />
+            <button data-route="/profissionais" data-method="delete">Excluir Profissional</button>
           </div>
           <div class="subbox">
             <p>Resposta:</p>
