--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,7 @@
     <div class="box">
       <h2 class="title">Inserir:</h2>
       <div class="boxarea">
+        <!-- Inserir Usuário -->
         <div class="buttons">
           <div class="subbox">
             <h3>Usuário</h3>
@@ -86,6 +87,7 @@
           </div>
         </div>
 
+        <!-- Inserir Obra -->
         <div class="buttons">
           <div class="subbox">
             <h3>Obra</h3>
@@ -100,6 +102,7 @@
           </div>
         </div>
 
+        <!-- Inserir Função -->
         <div class="buttons">
           <div class="subbox">
             <h3>Função</h3>
@@ -112,6 +115,7 @@
           </div>
         </div>
 
+        <!-- Inserir Temporada -->
         <div class="buttons">
           <div class="subbox">
             <h3>Temporada</h3>
@@ -129,6 +133,7 @@
           </div>
         </div>
 
+        <!-- Inserir Episódio -->
         <div class="buttons">
           <div class="subbox">
             <h3>Episódio</h3>
@@ -145,6 +150,7 @@
           </div>
         </div>
 
+        <!-- Inserir Avaliação -->
         <div class="buttons">
           <div class="subbox">
             <h3>Avaliação</h3>
@@ -161,11 +167,171 @@
           </div>
         </div>
 
+        <!-- Excluir Profissional -->
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Profissional</h3>
+            <input type="text" data-field="id" placeholder="ID do Profissional" />
+            <button data-route="/profissionais" data-method="delete">Excluir Profissional</button>
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
+
+        <!-- Excluir Organização -->
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Organização</h3>
+            <input type="text" data-field="id" placeholder="ID da Organização" />
+            <button data-route="/organizacoes" data-method="delete">Excluir Organização</button>
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
+
+        <!-- Excluir Participação -->
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Participação</h3>
+            <input type="text" data-field="id" placeholder="ID da Participação" />
+            <button data-route="/participacoes" data-method="delete">Excluir Participação</button>
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
+
+        <!-- Excluir Lista de Usuário -->
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Lista de Usuário</h3>
+            <input type="text" data-field="id" placeholder="ID da Lista" />
+            <button data-route="/listasusuario" data-method="delete">Excluir Lista</button>
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
+
+        <!-- Excluir Crítico -->
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Crítico</h3>
+            <input type="text" data-field="id" placeholder="ID do Usuário (usuaId)" />
+            <button data-route="/criticos" data-method="delete">Excluir Crítico</button>
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
+
+        <!-- Excluir Moderador -->
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Moderador</h3>
+            <input type="text" data-field="id" placeholder="ID do Usuário (usuaId)" />
+            <button data-route="/moderadores" data-method="delete">Excluir Moderador</button>
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
+
+        <!-- Inserir Categoria -->
         <div class="buttons">
           <div class="subbox">
             <h3>Categoria</h3>
-            <input type="text" data-field="nome" placeholder="Nome da Categoria" />
-            <button data-route="/categorias" data-method="post" data-fields="nome">Criar Categoria</button>
+            <input type="text" data-field="cateNome" placeholder="Nome da Categoria" />
+            <input type="text" data-field="cateDescricao" placeholder="Descrição (opcional)" />
+            <button data-route="/categorias" data-method="post" data-fields="cateNome,cateDescricao">Criar Categoria</button>
+          </div>
+          <div class="subbox">
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
+
+        <!-- Inserir Profissional -->
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Profissional</h3>
+            <input type="text" data-field="nome" placeholder="Nome do profissional" />
+            <button data-route="/profissionais" data-method="post" data-fields="nome">Criar Profissional</button>
+          </div>
+          <div class="subbox">
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
+
+        <!-- Inserir Organização -->
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Organização</h3>
+            <input type="text" data-field="nome" placeholder="Nome da organização" />
+            <button data-route="/organizacoes" data-method="post" data-fields="nome">Criar Organização</button>
+          </div>
+          <div class="subbox">
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
+
+        <!-- Inserir Participação -->
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Participação</h3>
+            <input type="text" data-field="obraId" placeholder="ID da Obra" />
+            <input type="text" data-field="funcaoId" placeholder="ID da Função (tipo)" />
+            <input type="text" data-field="organizacaoId" placeholder="ID da Organização (nome)" />
+            <input type="text" data-field="profissionalId" placeholder="ID do Profissional (nome)" />
+            <button data-route="/participacoes" data-method="post" data-fields="obraId,funcaoId,organizacaoId,profissionalId">Criar Participação</button>
+          </div>
+          <div class="subbox">
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
+
+        <!-- Inserir Lista de Usuário -->
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Lista de Usuário</h3>
+            <input type="text" data-field="titulo" placeholder="Título da lista" />
+            <input type="text" data-field="descricao" placeholder="Descrição (opcional)" />
+            <input type="text" data-field="privado" placeholder="Privado (true/false)" />
+            <input type="text" data-field="usuarioId" placeholder="ID do Usuário" />
+            <button data-route="/listasusuario" data-method="post" data-fields="titulo,descricao,privado,usuarioId">Criar Lista</button>
+          </div>
+          <div class="subbox">
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
+
+        <!-- Inserir Crítico -->
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Crítico</h3>
+            <input type="text" data-field="id" placeholder="ID do usuário (usuaId)" />
+            <input type="text" data-field="nome" placeholder="Nome completo" />
+            <input type="text" data-field="bio" placeholder="Bio" />
+            <input type="text" data-field="linkWebsite" placeholder="Website (opcional)" />
+            <input type="text" data-field="linkRedeSocial" placeholder="Rede social (opcional)" />
+            <input type="text" data-field="emailProfissional" placeholder="Email profissional (opcional)" />
+            <button data-route="/criticos" data-method="post" data-fields="id,nome,bio,linkWebsite,linkRedeSocial,emailProfissional">Criar Crítico</button>
+          </div>
+          <div class="subbox">
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
+
+        <!-- Inserir Moderador -->
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Moderador</h3>
+            <input type="text" data-field="id" placeholder="ID do usuário (usuaId)" />
+            <input type="text" data-field="permissaoCatalogo" placeholder="Permissão catálogo (true/false)" />
+            <input type="text" data-field="permissaoComunidade" placeholder="Permissão comunidade (true/false)" />
+            <input type="text" data-field="permissaoVerificacao" placeholder="Permissão verificação (true/false)" />
+            <button data-route="/moderadores" data-method="post" data-fields="id,permissaoCatalogo,permissaoComunidade,permissaoVerificacao">Criar Moderador</button>
           </div>
           <div class="subbox">
             <p>Resposta:</p>
@@ -178,6 +344,7 @@
     <div class="box">
       <h2 class="title">Alterar:</h2>
       <div class="boxarea">
+        <!-- Alterar Usuário -->
         <div class="buttons">
           <div class="subbox">
             <h3>Usuário</h3>
@@ -192,6 +359,7 @@
           </div>
         </div>
 
+        <!-- Alterar Obra -->
         <div class="buttons">
           <div class="subbox">
             <h3>Obras</h3>
@@ -207,6 +375,7 @@
           </div>
         </div>
 
+        <!-- Alterar Temporada -->
         <div class="buttons">
           <div class="subbox">
             <h3>Temporada</h3>
@@ -225,6 +394,7 @@
           </div>
         </div>
 
+        <!-- Alterar Avaliação -->
         <div class="buttons">
           <div class="subbox">
             <h3>Avaliação</h3>
@@ -241,12 +411,81 @@
             <div class="responseArea"></div>
           </div>
         </div>
+
+        <!-- Alterar Participação -->
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Participação</h3>
+            <input type="text" data-field="id" placeholder="ID da Participação" />
+            <input type="text" data-field="obraId" placeholder="ID da Obra" />
+            <input type="text" data-field="funcaoId" placeholder="ID da Função (tipo)" />
+            <input type="text" data-field="organizacaoId" placeholder="ID da Organização (nome)" />
+            <input type="text" data-field="profissionalId" placeholder="ID do Profissional (nome)" />
+            <button data-route="/participacoes" data-method="put" data-fields="obraId,funcaoId,organizacaoId,profissionalId">Alterar Participação</button>
+          </div>
+          <div class="subbox">
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
+
+        <!-- Alterar Lista de Usuário -->
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Lista de Usuário</h3>
+            <input type="text" data-field="id" placeholder="ID da Lista" />
+            <input type="text" data-field="titulo" placeholder="Título" />
+            <input type="text" data-field="descricao" placeholder="Descrição" />
+            <input type="text" data-field="privado" placeholder="Privado (true/false)" />
+            <input type="text" data-field="usuarioId" placeholder="ID do Usuário" />
+            <button data-route="/listasusuario" data-method="put" data-fields="titulo,descricao,privado,usuarioId">Alterar Lista</button>
+          </div>
+          <div class="subbox">
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
+
+        <!-- Alterar Crítico -->
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Crítico</h3>
+            <input type="text" data-field="id" placeholder="ID do Usuário (usuaId)" />
+            <input type="text" data-field="nome" placeholder="Nome completo" />
+            <input type="text" data-field="bio" placeholder="Bio" />
+            <input type="text" data-field="linkWebsite" placeholder="Website (opcional)" />
+            <input type="text" data-field="linkRedeSocial" placeholder="Rede social (opcional)" />
+            <input type="text" data-field="emailProfissional" placeholder="Email profissional (opcional)" />
+            <button data-route="/criticos" data-method="put" data-fields="nome,bio,linkWebsite,linkRedeSocial,emailProfissional">Alterar Crítico</button>
+          </div>
+          <div class="subbox">
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
+
+        <!-- Alterar Moderador -->
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Moderador</h3>
+            <input type="text" data-field="id" placeholder="ID do Usuário (usuaId)" />
+            <input type="text" data-field="permissaoCatalogo" placeholder="Permissão catálogo (true/false)" />
+            <input type="text" data-field="permissaoComunidade" placeholder="Permissão comunidade (true/false)" />
+            <input type="text" data-field="permissaoVerificacao" placeholder="Permissão verificação (true/false)" />
+            <button data-route="/moderadores" data-method="put" data-fields="permissaoCatalogo,permissaoComunidade,permissaoVerificacao">Alterar Moderador</button>
+          </div>
+          <div class="subbox">
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
       </div>
     </div>
     <hr />
     <div class="box">
       <h2 class="title">Excluir:</h2>
       <div class="boxarea">
+        <!-- Excluir Usuário -->
         <div class="buttons">
           <div class="subbox">
             <h3>Usuário</h3>
@@ -259,6 +498,7 @@
           </div>
         </div>
 
+        <!-- Excluir Obra -->
         <div class="buttons">
           <div class="subbox">
             <h3>Obra</h3>
@@ -271,6 +511,7 @@
           </div>
         </div>
 
+        <!-- Excluir Temporada -->
         <div class="buttons">
           <div class="subbox">
             <h3>Temporada</h3>
@@ -283,6 +524,7 @@
           </div>
         </div>
 
+        <!-- Excluir Episódio -->
         <div class="buttons">
           <div class="subbox">
             <h3>Episódio</h3>
@@ -295,6 +537,7 @@
           </div>
         </div>
 
+        <!-- Excluir Avaliação -->
         <div class="buttons">
           <div class="subbox">
             <h3>Avaliação</h3>
@@ -307,6 +550,7 @@
           </div>
         </div>
 
+        <!-- Excluir Função -->
         <div class="buttons">
           <div class="subbox">
             <h3>Função</h3>
@@ -319,6 +563,7 @@
           </div>
         </div>
 
+        <!-- Excluir Profissional -->
         <div class="buttons">
           <div class="subbox">
             <h3>Profissional</h3>
