Fix critico e moderador

--- a/public/index.html
+++ b/public/index.html
@@ -503,6 +503,32 @@
             <div class="responseArea"></div>
           </div>
         </div>
+
+        <!-- Excluir Crítico -->
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Crítico</h3>
+            <input type="text" data-field="id" placeholder="ID do Crítico" />
+            <button data-route="/criticos" data-method="delete">Excluir Crítico</button>
+          </div>
+          <div class="subbox">
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
+
+        <!-- Excluir Moderador -->
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Moderador</h3>
+            <input type="text" data-field="id" placeholder="ID do Moderador" />
+            <button data-route="/moderadores" data-method="delete">Excluir Moderador</button>
+          </div>
+          <div class="subbox">
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
       </div>
     </div>
     <script src="script.js"></script>
