--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,9 @@
         <a href="/participacoes">Participações</a>
         <a href="/organizacoes">Organizações</a>
         <a href="/listasusuario">Listas de Usuários</a>
+        <a href="/obrascategorias">Obras-Categorias</a>
+        <a href="/obraspaises">Obras-Paises</a>
+        <a href="/obraslistasusuario">Obras-ListasUsuario</a>
       </div>
     </div>
     <hr />
@@ -596,6 +599,54 @@
             <h3>Participação</h3>
             <input type="text" data-field="id" placeholder="ID da Participação" />
             <button data-route="/participacoes" data-method="delete">Excluir Participação</button>
+          </div>
+          <div class="subbox">
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr />
+    <div class="box">
+      <h2 class="title">Excluir Associativas sem PKs:</h2>
+      <div class="boxarea">
+        
+        <!-- Excluir Obra-Categoria -->
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Obra-Categoria</h3>
+            <input type="text" data-field="obraId" placeholder="ID da Obra" />
+            <input type="text" data-field="categoriaId" placeholder="ID da Categoria" />
+            <button class="associative" data-route="/obrascategorias" data-method="delete">Excluir Obra-Categoria</button>
+          </div>
+          <div class="subbox">
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
+
+        <!-- Excluir Obra-Pais -->
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Obra-Pais</h3>
+            <input type="text" data-field="obraId" placeholder="ID da Obra" />
+            <input type="text" data-field="paisId" placeholder="ID do País" />
+            <button class="associative" data-route="/obraspaises" data-method="delete">Excluir Obra-Pais</button>
+          </div>
+          <div class="subbox">
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
+
+        <!-- Excluir Obra-ListaUsuario -->
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Obra-ListaUsuario</h3>
+            <input type="text" data-field="obraId" placeholder="ID da Obra" />
+            <input type="text" data-field="listaUsuarioId" placeholder="ID da Lista de Usuário" />
+            <button class="associative" data-route="/obraslistasusuario" data-method="delete">Excluir Obra-ListaUsuario</button>
           </div>
           <div class="subbox">
             <p>Resposta:</p>
