--- a/public/index.html
+++ b/public/index.html
@@ -369,18 +369,15 @@
           </div>
         </div>
 
-        <!-- Alterar Temporada -->
+<!-- Alterar Moderador -->
         <div class="buttons">
           <div class="subbox">
-            <h3>Temporada</h3>
-            <input type="text" data-field="id" placeholder="ID da Temporada" />
-            <input type="number" data-field="numero" placeholder="Número" />
-            <input type="text" data-field="titulo" placeholder="Título" />
-            <input type="date" data-field="dataInicio" placeholder="Data início" />
-            <input type="date" data-field="dataFim" placeholder="Data fim" />
-            <input type="text" data-field="descricao" placeholder="Descrição" />
-            <input type="text" data-field="obraId" placeholder="ID da Obra" />
-            <button data-route="/temporadas" data-method="put" data-fields="numero,titulo,dataInicio,dataFim,descricao,obraId">Alterar Temporada</button>
+            <h3>Moderador</h3>
+            <input type="text" data-field="id" placeholder="ID do Usuário (usuaId)" />
+            <input type="text" data-field="permissaoCatalogo" placeholder="Permissão catálogo (true/false)" />
+            <input type="text" data-field="permissaoComunidade" placeholder="Permissão comunidade (true/false)" />
+            <input type="text" data-field="permissaoVerificacao" placeholder="Permissão verificação (true/false)" />
+            <button data-route="/moderadores" data-method="put" data-fields="permissaoCatalogo,permissaoComunidade,permissaoVerificacao">Alterar Moderador</button>
           </div>
           <div class="subbox">
             <p>Resposta:</p>
@@ -458,15 +455,36 @@
           </div>
         </div>
 
-        <!-- Alterar Moderador -->
+        <!-- Alterar Temporada -->
         <div class="buttons">
           <div class="subbox">
-            <h3>Moderador</h3>
-            <input type="text" data-field="id" placeholder="ID do Usuário (usuaId)" />
-            <input type="text" data-field="permissaoCatalogo" placeholder="Permissão catálogo (true/false)" />
-            <input type="text" data-field="permissaoComunidade" placeholder="Permissão comunidade (true/false)" />
-            <input type="text" data-field="permissaoVerificacao" placeholder="Permissão verificação (true/false)" />
-            <button data-route="/moderadores" data-method="put" data-fields="permissaoCatalogo,permissaoComunidade,permissaoVerificacao">Alterar Moderador</button>
+            <h3>Temporada</h3>
+            <input type="text" data-field="id" placeholder="ID da Temporada" />
+            <input type="number" data-field="numero" placeholder="Número" />
+            <input type="text" data-field="titulo" placeholder="Título" />
+            <input type="date" data-field="dataInicio" placeholder="Data início" />
+            <input type="date" data-field="dataFim" placeholder="Data fim" />
+            <input type="text" data-field="descricao" placeholder="Descrição" />
+            <input type="text" data-field="obraId" placeholder="ID da Obra" />
+            <button data-route="/temporadas" data-method="put" data-fields="numero,titulo,dataInicio,dataFim,descricao,obraId">Alterar Temporada</button>
+          </div>
+          <div class="subbox">
+            <p>Resposta:</p>
+            <div class="responseArea"></div>
+          </div>
+        </div>
+
+        <!-- Alterar Episódio -->
+        <div class="buttons">
+          <div class="subbox">
+            <h3>Episódio</h3>
+            <input type="text" data-field="id" placeholder="ID do Episódio" />
+            <input type="number" data-field="numero" placeholder="Número" />
+            <input type="date" data-field="dataLancamento" placeholder="Data de lançamento" />
+            <input type="text" data-field="titulo" placeholder="Título" />
+            <input type="text" data-field="descricao" placeholder="Descrição" />
+            <input type="text" data-field="temporadaId" placeholder="ID da Temporada" />
+            <button data-route="/episodios" data-method="put" data-fields="numero,dataLancamento,titulo,descricao,temporadaId">Alterar Episódio</button>
           </div>
           <div class="subbox">
             <p>Resposta:</p>
