--- a/public/index.html
+++ b/public/index.html
@@ -89,6 +89,32 @@
     </div>
     <hr />
     <div class="box">
+      <h2 class="title">Selects por ids de fks:</h2>
+      <div class="buttons">
+        <div class="subbox">
+          <input type="text" data-input="participacaoobra" placeholder="Digite o id da obra" />
+          <a href="#" data-route="/participacoesobras" data-input="participacaoobra" data-method="get">Participações da Obra</a>
+        </div>
+        <div class="subbox">
+          <input type="text" data-input="listasusuariousuario" placeholder="Digite o id do usuário" />
+          <a href="#" data-route="/listasusuariousuario" data-input="listasusuariousuario" data-method="get">Listas de Usuário</a>
+        </div>
+        <div class="subbox">
+          <input type="text" data-input="avaliacaousuario" placeholder="Digite o id do usuário" />
+          <a href="#" data-route="/avaliacoesusuario" data-input="avaliacaousuario" data-method="get">Avaliações de Usuário</a>
+        </div>
+        <div class="subbox">
+          <input type="text" data-input="avaliacaoobra" placeholder="Digite o id da obra" />
+          <a href="#" data-route="/avaliacoesobra" data-input="avaliacaoobra" data-method="get">Avaliações de Obra</a>
+        </div>
+        <div class="subbox">
+          <input type="text" data-input="avaliacaoepisodio" placeholder="Digite o id do episódio" />
+          <a href="#" data-route="/avaliacoesepisodio" data-input="avaliacaoepisodio" data-method="get">Avaliações de Episódio</a>
+        </div>
+      </div>
+    </div>
+    <hr />
+    <div class="box">
       <h2 class="title">Inserir:</h2>
       <div class="boxarea">
         <!-- Inserir Usuário -->
@@ -369,7 +395,7 @@
           </div>
         </div>
 
-<!-- Alterar Moderador -->
+        <!-- Alterar Moderador -->
         <div class="buttons">
           <div class="subbox">
             <h3>Moderador</h3>
