Adicionado todas getByFk

--- a/public/index.html
+++ b/public/index.html
@@ -111,6 +111,54 @@
           <input type="text" data-input="avaliacaoepisodio" placeholder="Digite o id do episódio" />
           <a href="#" data-route="/avaliacoesepisodio" data-input="avaliacaoepisodio" data-method="get">Avaliações de Episódio</a>
         </div>
+        <div class="subbox">
+          <input type="text" data-input="participacaoorganizacao" placeholder="Digite o id da organização" />
+          <a href="#" data-route="/participacoesorganizacao" data-input="participacaoorganizacao" data-method="get">Participações por Organização</a>
+        </div>
+        <div class="subbox">
+          <input type="text" data-input="participacaofuncao" placeholder="Digite o tipo da função" />
+          <a href="#" data-route="/participacoesfuncao" data-input="participacaofuncao" data-method="get">Participações por Função</a>
+        </div>
+        <div class="subbox">
+          <input type="text" data-input="participacaoprofissional" placeholder="Digite o nome do profissional" />
+          <a href="#" data-route="/participacoesprofissional" data-input="participacaoprofissional" data-method="get">Participações por Profissional</a>
+        </div>
+        <div class="subbox">
+          <input type="text" data-input="temporadaobra" placeholder="Digite o id da obra" />
+          <a href="#" data-route="/temporadasobra" data-input="temporadaobra" data-method="get">Temporadas da Obra</a>
+        </div>
+        <div class="subbox">
+          <input type="text" data-input="episodiostemporada" placeholder="Digite o id da temporada" />
+          <a href="#" data-route="/episodiostemporada" data-input="episodiostemporada" data-method="get">Episódios da Temporada</a>
+        </div>
+        <div class="subbox">
+          <input type="text" data-input="obrastipoobra" placeholder="Digite o tipo da obra" />
+          <a href="#" data-route="/obrastipoobra" data-input="obrastipoobra" data-method="get">Obras por Tipo</a>
+        </div>
+        <div class="subbox">
+          <input type="text" data-input="obracategoriaobra" placeholder="Digite o id da obra" />
+          <a href="#" data-route="/obrascategoriasobra" data-input="obracategoriaobra" data-method="get">Obras-Categorias da Obra</a>
+        </div>
+        <div class="subbox">
+          <input type="text" data-input="obracategoriacategoria" placeholder="Digite o nome da categoria" />
+          <a href="#" data-route="/obrascategoriascategoria" data-input="obracategoriacategoria" data-method="get">Obras por Categoria</a>
+        </div>
+        <div class="subbox">
+          <input type="text" data-input="obrapaisobra" placeholder="Digite o id da obra" />
+          <a href="#" data-route="/obraspaisesobra" data-input="obrapaisobra" data-method="get">Obras-Paises da Obra</a>
+        </div>
+        <div class="subbox">
+          <input type="text" data-input="obrapaispais" placeholder="Digite o nome do país" />
+          <a href="#" data-route="/obraspaisespais" data-input="obrapaispais" data-method="get">Obras por País</a>
+        </div>
+        <div class="subbox">
+          <input type="text" data-input="obralistaobra" placeholder="Digite o id da obra" />
+          <a href="#" data-route="/obraslistasusuarioobra" data-input="obralistaobra" data-method="get">Obras-ListasUsuario da Obra</a>
+        </div>
+        <div class="subbox">
+          <input type="text" data-input="obralistalista" placeholder="Digite o id da lista" />
+          <a href="#" data-route="/obraslistasusuariolista" data-input="obralistalista" data-method="get">Obras-ListasUsuario por Lista</a>
+        </div>
       </div>
     </div>
     <hr />
