Inserir e rota de avaliacao de obra por usuario

--- a/public/index.html
+++ b/public/index.html
@@ -160,6 +160,14 @@
           <input type="text" data-input="obralistalista" placeholder="Digite o id da lista" />
           <a href="#" data-route="/obraslistasusuariolista" data-input="obralistalista" data-method="get">Obras-ListasUsuario por Lista</a>
         </div>
+        <div class="subbox">
+          <input type="text" data-input="avaliacaoobrausuario" placeholder="Digite o id do usuário" />
+          <a href="#" data-route="/avaliacoesobrausuario" data-input="avaliacaoobrausuario" data-method="get">Avaliações de Obras por Usuário</a>
+        </div>
+        <div class="subbox">
+          <input type="text" data-input="avaliacaoepisodiousuario" placeholder="Digite o id do usuário" />
+          <a href="#" data-route="/avaliacoesepisodiousuario" data-input="avaliacaoepisodiousuario" data-method="get">Avaliações de Episódios por Usuário</a>
+        </div>
       </div>
     </div>
     <hr />
